<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_edit_countdown_per_atendee"
        android:icon="@drawable/ic_timer_white_24dp"
        android:title="@string/action_edit_countdown_per_attendee"
        android:visible="true"
        app:showAsAction="ifRoom" >
        <menu>

        </menu>
    </item>

    <item
        android:id="@+id/action_play_mode"
        android:icon="@drawable/ic_repeat_white_24dp"
        android:title="@string/action_change_loop_mode"
        android:visible="true"
        app:showAsAction="ifRoom" >
    </item>

    <item
        android:id="@+id/action_feedback"
        android:icon="@drawable/ic_announcement_white_24dp"
        android:title="@string/action_give_feedback"
        android:visible="true"
        app:showAsAction="never" >
    </item>
</menu>