<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:id="@+id/edit_name"
              xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:layout_gravity="center"
              android:orientation="vertical"
              android:paddingBottom="@dimen/material_margin_large"
              android:paddingTop="@dimen/material_margin_large">

    <RelativeLayout
        android:id="@+id/loopModeHitBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/material_margin_small"
        android:background="?attr/selectableItemBackground"
        android:clickable="true"
        android:paddingLeft="@dimen/material_margin_large"
        android:paddingRight="@dimen/material_margin_large">

        <RadioButton
            android:id="@+id/loopModeRadioButton"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_alignBottom="@+id/loopModeLabelLayout"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_alignTop="@+id/loopModeLabelLayout"
            android:layout_centerInParent="true"
            android:clickable="false" />

        <LinearLayout
            android:id="@+id/loopModeLabelLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/material_margin_small"
            android:layout_marginStart="@dimen/material_margin_small"
            android:layout_toEndOf="@id/loopModeRadioButton"
            android:layout_toRightOf="@id/loopModeRadioButton"
            android:orientation="vertical">

            <TextView
                style="@style/Base.TextAppearance.AppCompat.Medium"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/loop_mode_title" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/loop_mode_description" />
        </LinearLayout>

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/stepByStepHitBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/selectableItemBackground"
        android:clickable="true"
        android:paddingLeft="@dimen/material_margin_large"
        android:paddingRight="@dimen/material_margin_large">

        <RadioButton
            android:id="@+id/stepByStepRadioButton"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_alignBottom="@+id/stepByStepLabelLayout"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_alignTop="@+id/stepByStepLabelLayout"
            android:layout_centerInParent="true"
            android:clickable="false" />

        <LinearLayout
            android:id="@+id/stepByStepLabelLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/material_margin_small"
            android:layout_marginStart="@dimen/material_margin_small"
            android:layout_toEndOf="@id/stepByStepRadioButton"
            android:layout_toRightOf="@id/stepByStepRadioButton"
            android:orientation="vertical">

            <TextView
                style="@style/Base.TextAppearance.AppCompat.Medium"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/step_by_step_mode_title" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/step_by_step_mode_description" />
        </LinearLayout>
    </RelativeLayout>
</LinearLayout>